gitops/apps/cakeshop-concept/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cakeshop-concept
  namespace: cakeshop-concept
  labels:
    app: cakeshop-concept
spec:
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: cakeshop-concept
  template:
    metadata:
      labels:
        app: cakeshop-concept
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: isma.dev/ram-gb
                    operator: In
                    values: ["1"]
      containers:
        - name: cakeshop-concept
          image: ghcr.io/ismola/cakeshop-concept:main
          imagePullPolicy: Always
          ports:
            - containerPort: 4321
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
              ephemeral-storage: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
              ephemeral-storage: 256Mi
