gitops/apps/cakeshop-concept/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cakeshop-concept
  namespace: cakeshop-concept
spec:
  type: ClusterIP
  selector:
    app: cakeshop-concept
  ports:
    - name: http
      port: 80
      targetPort: 80
